<resources>
    <string name="app_name">FoxLock</string>
    <string name="settings_activity_toolbar_title">Settings</string>
    <string name="settings_activity_slide_title">SWIPE LOCK</string>
    <string name="settings_activity_applock_title">APP LOCK</string>
    <string name="settings_activity_advanced_title">ADVANCED PROTECTION</string>
    <string name="settings_activity_activate_slide_title">Activate Slide Lock</string>
    <string name="settings_activity_activate_slide_summery">Start earning using slide lock</string>
    <string name="settings_activity_activate_locker_title">Activate App Lock</string>
    <string name="settings_activity_activate_locker_enabled">App lock enabled</string>
    <string name="settings_activity_activate_locker_disabled">App lock disabled</string>
    <string name="settings_activity_notification_locker_title">Hide Notifications</string>
    <string name="settings_activity_vibrate_title">Vibrate</string>
    <string name="settings_activity_vibrate_summery">Vibrate pin/pattern touch</string>
    <string name="settings_activity_change_pin_title">Change Pin/Pattern</string>
    <string name="settings_activity_change_pin_enabled">PIN enabled</string>
    <string name="settings_activity_change_pattern_enabled">Pattern enabled</string>
    <string name="settings_activity_fingerprint_title">Fingerprint Lock</string>
    <string name="settings_activity_pin_hide_title">Hide Pin Touches</string>
    <string name="settings_activity_pattern_hide_title">Hide Pattern Lines</string>
    <string name="settings_activity_relock_title">Re-Lock on screen OFF</string>
    <string name="settings_activity_relock_summery">Re-lock apps when screen locked</string>
    <string name="settings_activity_change_pin_summery">PIN enabled</string>
    <string name="settings_activity_change_pattern_summery">Pattern enabled</string>
    <string name="settings_activity_prevent_uninstall_title">Prevent FoxLock Uninstall</string>
    <string name="settings_activity_prevent_uninstall_summery">It is highly recommended to enable this protection. This prevents
    unauthorized users or apps from uninstalling FoxLock </string>
    <string name="settings_prevent_uninstall_alert_title">Device Administrator Permission Required</string>
    <string name="settings_prevent_uninstall_alert_message">By enabling this permission no user sensitive data or password is changed or deleted by FoxLock.
    The sole purpose for enabling this permission, is to prevent other 3rd party apps to uninstall FoxLock by mistake.
    \n\n Note: The Device Administrator permission can be disabled anytime inside FoxLock by navigating to FoxLock Settings and disabling
        \"Prevent FoxLock Uninstall\" option.
    </string>
    <string name="settings_prevent_uninstall_positive">ACTIVATE</string>
    <string name="settings_dialog_finger_negative_header">Unable to switch on</string>
    <string name="settings_dialog_finger_no_sensor">Fingerprint sensor not available in your device</string>
    <string name="settings_dialog_finger_not_supported">Your version of Android is not supported for this feature</string>
    <string name="settings_dialog_finger_no_fingerprint">Fingerprint not enrolled. Kindly enroll at-least one fingerprint from Android settings</string>
    <string name="settings_dialog_finger_negative_text">GOT IT</string>
    <string name="set_email_activity_info">FoxLock recommends you to add recovery email, to reset the pin/pattern when you forget it.
                                            Note: Only recovery email is sent to the email address you provide</string>
    <string name="set_email_activity_header">Set Up Recovery Email</string>
    <string name="set_email_activity_add_email">Submit</string>
    <string name="set_email_activity_choose_email">Choose From Device</string>
    <string name="set_email_activity_add_email_hint">Enter your email</string>
    <string name="set_email_activity_or_text">-  Or  -</string>
    <string name="set_email_activity_choose_email_help">Choose an Email/enter one</string>
    <string name="set_email_activity_empty_email">Email cannot be empty</string>
    <string name="set_email_activity_valid_email">Enter a valid email</string>
    <string name="reset_pin_pattern_step_one_info">STEP 1: Send recovery code to security email</string>
    <string name="reset_pin_pattern_step_two_info">STEP 2: Enter recovery code to reset PIN/Pattern</string>
    <string name="reset_pin_pattern_send_text">SEND RECOVERY CODE</string>
    <string name="reset_pin_pattern_reset_text">RESET PIN/PATTERN</string>
    <string name="reset_pin_pattern_reset_hint">Enter Recovery Code</string>
    <string name="reset_pin_pattern_toolbar_title">Forgot PIN/Pattern</string>
    <string name="reset_pin_pattern_network_failed_header">Operation Failed</string>
    <string name="reset_pin_pattern_network_failed">Network Connection Unavailable</string>
    <string name="reset_pin_pattern_response_failed">Try again after some time</string>
    <string name="reset_pin_pattern_network_failed_negative">DISMISS</string>
    <string name="reset_pin_pattern_network_success_negative">OK</string>
    <string name="reset_pin_pattern_network_success_header">Operation Success</string>
    <string name="reset_pin_pattern_network_success_message">Recovery code is sent to your email</string>
    <string name="reset_pin_pattern_network_loading_header">Please Wait</string>
    <string name="reset_pin_pattern_network_loading_message">Sending recovery Code</string>
    <string name="reset_pin_pattern_pause_request">Please wait for </string>
    <string name="reset_pin_pattern_reset_code_invalid">Invalid Recovery Code</string>
    <string name="main_screen_activity_lock_button_text">Lock Apps</string>
    <string name="main_screen_activity_app_lock_button_text">AppLock</string>
    <string name="main_screen_activity_vault_button_text">Vault</string>
    <string name="main_screen_activity_settings_button_text">Settings</string>
    <string name="main_screen_activity_loyalty_button_text">Gift</string>
    <string name="main_screen_activity_video_button_text">How Loyalty Bonus Works</string>
    <string name="main_screen_activity_app_name_text">FoxLock</string>
    <string name="main_screen_activity_app_name_summery">Lock Apps and Hide Media</string>
    <string name="main_screen_activity_app_info_summery">Learn more about Loyalty Bonus</string>
    <string name="main_screen_activity_app_lock_info_On">ON</string>
    <string name="main_screen_activity_app_lock_info_Off">OFF</string>
    <string name="main_screen_activity_installed_info">Installed Apps</string>
    <string name="main_screen_activity_locked_info">Locked Apps</string>
    <string name="main_screen_activity_faq_button_text">Rules &amp; FAQ</string>
    <string name="main_screen_activity_lock_info_message">Click to lock installed apps</string>
    <string name="main_screen_activity_ad_unit_id">ca-app-pub-4739007494599063/2472603036</string>
    <string name="main_lock_activity_forgot_button">FORGOT PASSWORD</string>
    <string name="lockup_api_key">AIzaSyA0cMFtikQjLcu-F9Zg8RMzNCi3kHEttKQ</string>
    <string name="watch_video_playback_error">Video-playback failed</string>
    <string name="watch_video_playback_error_info">Refresh to play again</string>
    <string name="main_screen_apps_locked_info">apps locked</string>
    <string name="main_screen_apps_locked_info_single">app locked</string>
    <string name="set_pattern_fragment_title_text">Set Pattern</string>
    <string name="set_pattern_fragment_info_text">Connect minimum of 4 dots</string>
    <string name="set_pattern_fragment_change_lock_text">Change to PIN lock</string>
    <string name="set_pattern_fragment_confirm_text">Confirm Pattern</string>
    <string name="set_pattern_fragment_not_equal_text">Pattern did not match</string>
    <string name="set_pattern_fragment_reset_text">RESET</string>
    <string name="set_pin_fragment_title_text">Set PIN</string>
    <string name="set_pin_fragment_info_text">Select 4 digits as PIN</string>
    <string name="set_pin_fragment_change_lock_text">Change to Pattern lock</string>
    <string name="set_pin_fragment_confirm_text">Confirm PIN</string>
    <string name="set_pin_fragment_not_equal_text">PIN did not match</string>
    <string name="appLock_activity_title">AppLock</string>
    <string name="appLock_activity_additional_settings_header">RECOMMENDED</string>
    <string name="appLock_activity_checked_apps_header">LOCKED</string>
    <string name="appLock_activity_installed_apps_header">INSTALLED</string>
    <string name="appLock_activity_installed_apps_empty">NO NEW APPS INSTALLED</string>
    <string name="appLock_activity_checked_apps_empty">NO NEW APPS LOCKED</string>
    <string name="appLock_activity_usage_dialog_message">
        In Android Lollipop(5.0) and above Usage Access permission is needed for FoxLock to lock installed apps
    </string>
     <string name="appLock_activity_overlay_dialog_message">
        FoxLock requires permission to draw over apps for the AppLock to lock installed apps
    </string>
     <string name="appLock_activity_notif_dialog_message">
        FoxLock requires permission to hide and lock incoming notifications
    </string>
    <string name="appLock_activity_notif_dialog_message_two">
        Note: If you have permitted FoxLock to hide notifications before, kindly disable and enable the permission
    </string>
    <string name="appLock_activity_usage_dialog_permit_text">YES PERMIT</string>
    <string name="appLock_activity_usage_dialog_cancel_text">NOT NOW</string>
    <string name="appLock_activity_usage_dialog_overlay_permission_request">
        FoxLock - Enable Permission for AppLock to lock apps
    </string>
    <string name="appLock_activity_should_start_dialog_info">
        App Lock is disabled would you like to enable app lock ?
    </string>
    <string name="appLock_activity_toggle_text">Find FoxLock and switch on</string>
    <string name="appLock_activity_should_start_dialog_permit">START</string>
    <string name="appLock_activity_should_start_dialog_cancel">NOT NOW</string>
    <string name="appLock_activity_prevent_uninstall_info_text">Deactivating may cause FoxLock to be uninstalled or
        force stopped by other applications. Are you sure you want to proceed?</string>
    <string name="appLock_activity_prevent_uninstall_message_text">
        Activate now to prevent unauthorized FoxLock un-installation and force stops.
    </string>
    <string name="recommended_text_sixteen_up_one">Hide Notifications</string>
    <string name="recommended_unlock_alert_text">
        Unlocking the app will allow unauthorized users to stop app lock or uninstall FoxLock completely. Are you sure you want to unlock?
    </string>
    <string name="recommended_unlock_alert_dialog_positive_text">UNLOCK</string>
    <string name="recommended_unlock_alert_dialog_negative_text">CANCEL</string>
    <string name="finger_print_lock_main_info">Use fingerprint to unlock</string>
    <string name="finger_print_lock_main_failed_general">Failed to recognize finger print. Try again</string>
    <string name="finger_print_lock_main_failed_attempt_two">Failed to recognize finger print. Try another finger instead</string>
    <string name="finger_print_lock_main_failed_locked_pin">Fingerprint reader locked. Try to unlock using PIN</string>
    <string name="loyalty_user_main_points_head">Your Points</string>
    <string name="loyalty_user_main_points_info_one">100 points = 1$</string>
    <string name="loyalty_user_main_points_info_three">You may get 0.50 &#8211; 7 points a day, depends on the number of locked Apps. Check Rules &amp; FAQ</string>
    <string name="loyalty_user_main_redeem_text">Redeem with</string>
    <string name="extra_earning_title">Earn More</string>
</resources>