<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/backgroundGrey"
    android:fillViewport="true"
    >

    <RelativeLayout
        android:id="@+id/loyalty_bonus_user_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

        <RelativeLayout
            android:id="@+id/loyalty_bonus_user_main_points_group"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:layout_alignParentTop="true"
            android:background="@color/colorMainPrimary"
            >
            <TextView
                android:id="@+id/loyalty_bonus_user_main_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/tenDpDimension"
                android:layout_marginLeft="@dimen/fifteenDpDimension"
                android:layout_marginStart="@dimen/fifteenDpDimension"
                android:textSize="@dimen/thirteenSpDimension"
                android:textColor="@color/white"
                />
            <TextView
                android:id="@+id/loyalty_bonus_user_main_point_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loyalty_bonus_user_main_welcome"
                android:layout_marginTop="@dimen/thirtyDpDimension"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:textSize="@dimen/seventeenSpDimension"
                android:text="@string/loyalty_user_main_points_head"
                />

            <TextView
                android:id="@+id/loyalty_bonus_user_main_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loyalty_bonus_user_main_point_head"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/tenDpDimension"
                android:textSize="28sp"
                android:textColor="@color/colorMainAccent"
                android:visibility="invisible"
                />

            <android.support.v7.widget.CardView
                android:id="@+id/loyalty_bonus_user_points_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/fiveDpDimension"
                android:layout_below="@+id/loyalty_bonus_user_main_welcome"
                android:layout_marginTop="@dimen/tenDpDimension"

                android:background="@color/white"
                android:visibility="invisible"
                >
                <RelativeLayout
                    android:id="@+id/loyalty_bonus_user_points_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/loyalty_bonus_user_points_info_button"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:srcCompat="@drawable/ic_chevron_left_24dp"
                        android:adjustViewBounds="true"
                        android:background="@null"
                        android:scaleType="fitXY"
                        android:layout_centerVertical="true"
                        />
                    <TextView
                        android:id="@+id/loyalty_bonus_user_main_redeem_info_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/loyalty_bonus_user_points_info_button"
                        android:layout_toRightOf="@+id/loyalty_bonus_user_points_info_button"
                        android:layout_marginLeft="@dimen/fifteenDpDimension"
                        android:layout_marginStart="@dimen/fifteenDpDimension"
                        android:layout_marginRight="@dimen/tenDpDimension"
                        android:layout_marginEnd="@dimen/tenDpDimension"
                        android:layout_marginTop="@dimen/tenDpDimension"
                        android:textSize="@dimen/fifteenSpDimension"
                        android:textColor="@color/textSettingsSecondary"
                        android:text="@string/loyalty_user_main_points_info_one"
                        />
                    <TextView
                        android:id="@+id/loyalty_bonus_user_main_redeem_info_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/loyalty_bonus_user_main_redeem_info_one"
                        android:layout_toEndOf="@+id/loyalty_bonus_user_points_info_button"
                        android:layout_toRightOf="@+id/loyalty_bonus_user_points_info_button"
                        android:layout_marginLeft="@dimen/fifteenDpDimension"
                        android:layout_marginStart="@dimen/fifteenDpDimension"
                        android:layout_marginRight="@dimen/tenDpDimension"
                        android:layout_marginEnd="@dimen/tenDpDimension"
                        android:layout_marginTop="@dimen/tenDpDimension"
                        android:textSize="@dimen/twelveSpDimension"
                        android:textColor="@color/textPrimaryColor"
                        />
                    <TextView
                        android:id="@+id/loyalty_bonus_user_main_redeem_info_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/loyalty_bonus_user_main_redeem_info_two"
                        android:layout_toEndOf="@+id/loyalty_bonus_user_points_info_button"
                        android:layout_toRightOf="@+id/loyalty_bonus_user_points_info_button"
                        android:layout_marginLeft="@dimen/fifteenDpDimension"
                        android:layout_marginStart="@dimen/fifteenDpDimension"
                        android:layout_marginRight="@dimen/tenDpDimension"
                        android:layout_marginEnd="@dimen/tenDpDimension"
                        android:layout_marginTop="@dimen/fiveDpDimension"
                        android:layout_marginBottom="@dimen/tenDpDimension"
                        android:textSize="@dimen/twelveSpDimension"
                        android:textColor="@color/textSettingsSecondary"
                        android:text="@string/loyalty_user_main_points_info_three"
                        />

                </RelativeLayout>


            </android.support.v7.widget.CardView>

            <ProgressBar
                android:id="@+id/loyalty_bonus_user_main_progress"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_below="@+id/loyalty_bonus_user_main_point_head"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/tenDpDimension"
                android:visibility="invisible"
                />

            <Button
                android:id="@+id/loyalty_bonus_user_main_earn_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/loyalty_earn_button"
                android:layout_below="@+id/loyalty_bonus_user_points_info"
                android:layout_marginTop="@dimen/twentyFiveDpDimension"
                android:text="@string/extra_earning_title"
                android:textColor="@color/white"
                android:padding="@dimen/tenDpDimension"
                />
        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/loyalty_bonus_user_slidelock_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tenDpDimension"
            android:layout_marginRight="@dimen/tenDpDimension"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="@dimen/fiveDpDimension"
            android:layout_marginTop="240dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/loyalty_bonus_user_slide_lock_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fifteenDpDimension"
                    android:layout_marginStart="@dimen/fifteenDpDimension"
                    android:layout_marginEnd="@dimen/fifteenDpDimension"
                    android:layout_marginRight="@dimen/fifteenDpDimension"
                    android:layout_marginTop="@dimen/fifteenDpDimension"
                    android:layout_marginBottom="@dimen/tenDpDimension"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/textDarkGrey"
                    android:textSize="@dimen/seventeenSpDimension"
                    android:text="@string/settings_activity_activate_slide_title"
                    />
                <TextView
                    android:id="@+id/loyalty_bonus_user_slide_lock_info_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fifteenDpDimension"
                    android:layout_marginStart="@dimen/fifteenDpDimension"
                    android:layout_marginEnd="@dimen/tenDpDimension"
                    android:layout_marginRight="@dimen/tenDpDimension"
                    android:layout_marginBottom="@dimen/fifteenDpDimension"
                    android:layout_below="@+id/loyalty_bonus_user_slide_lock_text"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/textSettingsSecondary"
                    android:textSize="@dimen/fifteenSpDimension"
                    android:text="@string/settings_activity_activate_slide_summery"

                    />
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/loyalty_bonus_user_main_lock_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/fourtyDpDimension"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <View
            android:id="@+id/loyalty_bonus_user_main_redeem_separator"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            />

        <android.support.v7.widget.CardView
            android:id="@+id/loyalty_bonus_user_paypal_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/tenDpDimension"
            app:cardCornerRadius="@dimen/fiveDpDimension"
            android:layout_below="@+id/loyalty_bonus_user_slidelock_card"
            android:layout_toLeftOf="@+id/loyalty_bonus_user_main_redeem_separator"
            android:layout_toStartOf="@+id/loyalty_bonus_user_main_redeem_separator"
            android:layout_alignLeft="@+id/loyalty_bonus_user_slidelock_card"
            android:layout_alignStart="@+id/loyalty_bonus_user_slidelock_card"
            android:layout_marginEnd="@dimen/twentyDpDimension"
            android:layout_marginRight="@dimen/twentyDpDimension"
            android:layout_marginTop="@dimen/twentyDpDimension"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/loyalty_bonus_user_paypal_head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="@dimen/twentyDpDimension"
                    android:paddingLeft="@dimen/twentyDpDimension"
                    android:paddingRight="@dimen/twentyDpDimension"
                    android:textSize="@dimen/twelveSpDimension"
                    android:textColor="@color/colorMainPrimary"
                    android:text="@string/loyalty_user_main_redeem_text"
                    />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/loyalty_bonus_user_paypal_logo"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/tenDpDimension"
                    android:background="@null"
                    app:srcCompat="@drawable/ic_paypal_logo"
                    android:scaleType="fitXY"
                    />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/loyalty_bonus_user_paytm_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/tenDpDimension"
            app:cardCornerRadius="@dimen/fiveDpDimension"
            android:layout_below="@+id/loyalty_bonus_user_slidelock_card"
            android:layout_toRightOf="@+id/loyalty_bonus_user_main_redeem_separator"
            android:layout_toEndOf="@+id/loyalty_bonus_user_main_redeem_separator"
            android:layout_alignRight="@+id/loyalty_bonus_user_slidelock_card"
            android:layout_alignEnd="@+id/loyalty_bonus_user_slidelock_card"
            android:layout_marginStart="@dimen/twentyDpDimension"
            android:layout_marginLeft="@dimen/twentyDpDimension"
            android:layout_marginTop="@dimen/twentyDpDimension"
            android:layout_marginBottom="@dimen/twentyDpDimension"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/loyalty_bonus_user_paytm_head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="@dimen/twentyDpDimension"
                    android:paddingLeft="@dimen/twentyDpDimension"
                    android:paddingRight="@dimen/twentyDpDimension"
                    android:textSize="@dimen/twelveSpDimension"
                    android:textColor="@color/colorMainPrimary"
                    android:text="@string/loyalty_user_main_redeem_text"
                    />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/loyalty_bonus_user_paytm_logo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/fifteenDpDimension"
                    android:layout_marginBottom="@dimen/fiveDpDimension"
                    android:background="@null"
                    app:srcCompat="@drawable/ic_paytm_logo"
                    android:scaleType="fitXY"
                    />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/loyalty_bonus_profile_ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:adUnitId="ca-app-pub-2878097117146801/3626243772"
            app:adSize="BANNER"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/loyalty_bonus_user_paypal_group"
            android:layout_marginTop="@dimen/fifteenDpDimension"
            />
    </RelativeLayout>
    </ScrollView>